(fix) fixing up horizontal scroll on mobile bug

--- a/app/assets/stylesheets/dit-styleguide-augment/base/_global.scss
+++ b/app/assets/stylesheets/dit-styleguide-augment/base/_global.scss
@@ -16,3 +16,6 @@ body.js-enabled {
 		visibility: hidden
 	}
 }
+body {
+	overflow-x: hidden;
+}
